# fast-intercom-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  ENHANCEMENT_README.md  GENERIC_CLAUDE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README-Docker.md  README.md  RENDER_DEPLOYMENT.md  TODO.md  auto_sync_scheduler.py  comprehensive_sync_test.py  docker-compose.sync.yml  docker-compose.test.yml  docker-compose.yml  fast-intercom-sync.service  final_comprehensive_performance_report.md  full_workspace_sync_test.py  integration_test_report.json  local_ci_mirror_test.py  mcp.MD  monitor_sync_progress.py  performance_test.py  pyproject.toml  quick_performance_test.py  requirements.txt  run_daily_sync.py  run_full_sync.py  run_migration.py  sync_with_contacts.py  test_api_only.py  test_mcp_functionality.py  test_progress_monitoring.py  test_results.json
.github/: BRANCH_PROTECTION.md
.github/ISSUE_TEMPLATE/: critical-fix.md
.github/workflows/: docker-install-test.yml  fast-check.yml  integration-check.yml  integration-test.yml  quick-test.yml
.test-workspace-20250628-232425-450f12/data/: config.json  data.db
.test-workspace-20250628-232425-450f12/logs/: init_output.txt  sync_output.txt
.test-workspace-20250628-235243-8e0fd5/data/: data.db
.test-workspace-20250628-235243-8e0fd5/logs/: init_output.txt  sync_output.txt
docker/: .env.example  entrypoint.sh
docs/: COMPETITIVE_ANALYSIS.md  INTEGRATION_TESTING.md  MCP_BEST_PRACTICES.md  PERFORMANCE_REPORT.md  SPECIFICATION.md  TESTING.md  TESTING_GUIDE.md  TEST_PLAN.md  TRANSITION_PLAN.md
fast_intercom_mcp/: __init__.py  __main__.py  app.py  background_sync.py  cli.py  config.py  database.py  http_server.py  intercom_client.py  mcp_endpoints.py  mcp_server.py  mcp_sse.py  mcp_sse_bidirectional.py  mcp_sse_simple.py  models.py  server.py  sync_service.py
fast_intercom_mcp/api/: __init__.py  client.py
fast_intercom_mcp/core/: __init__.py  config.py  logging.py
fast_intercom_mcp/db/: __init__.py  connection.py
fast_intercom_mcp/sync/: __init__.py  coordinator.py  detection.py  incremental.py  service.py  state.py  strategies.py  tracking.py
fast_intercom_mcp/tools/: __init__.py  articles.py  conversations.py  sync.py  tickets.py
fast_intercom_mcp/transport/: __init__.py  optimization.py  rate_limiter.py
fast_intercom_mcp/utils/: __init__.py  context_window.py
fastintercom/: __init__.py  cli.py  database.py  intercom_client.py  mcp_server.py
integration_test_data/: test_integration.db
migrations/: 001_initial_schema.sql
scripts/: README.md  compare_to_baseline.py  debug_sync_issue.py  docker_test_runner.sh  example-pre-commit-hook  generate_performance_report.py  generate_test_data.py  import_test_data.py  local_ci_mirror_test.py  monitor_sync_progress.py  performance_test.py  pre_commit_validation.sh  quick_performance_test.py  record_baseline.py  run_integration_test.sh  test_docker_install.sh  test_mcp_server.py  test_mcp_server_simple.py  test_mcp_tools.py
tests/: __init__.py  conftest.py  test_database_init.py  test_mcp_protocol.py  test_server_health.py  test_sync_service.py  test_sync_verification.py
tests/compatibility/: __init__.py  test_cross_feature.py
tests/integration/: __init__.py  test_e2e_comprehensive.py  test_feature_compatibility.py  test_performance_benchmarks.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: __init__.py  test_context_window.py  test_database_init.py  test_sync_service.py
